--- a/Downtown Oshawa/landing.html
+++ b/Downtown Oshawa/landing.html
@@ -206,7 +206,7 @@
             <!--<iframe width="0" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=Hamilton&t=k&z=13&ie=UTF8&iwloc=&output=embed"></iframe>-->
         </div>
         <!--Maps Script-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfeWjWRorJ1sRsh-H72rV85qWuxpG97fM&libraries=drawing,geometry,localContext,places,visualization&callback=initMap" async defer></script>
+        <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBfeWjWRorJ1sRsh-H72rV85qWuxpG97fM&libraries=drawing,geometry,localContext,places,visualization&callback=initMap" async defer></script> -->
     </div>
 </div>
 
