Low Resolutions added

--- a/Downtown Oshawa/landing.html
+++ b/Downtown Oshawa/landing.html
@@ -51,6 +51,14 @@
                   <span class="slider round"></span>
                 </label>
               </div>
+              <!-- Rounded switch for full res mode -->
+              <div class="sidebar-line">
+                <span class="menu-option">Full Resolution:</span>
+                <label class="switch">
+                    <input id="cbHighRes" type="checkbox">
+                    <span class="slider round"></span>
+                </label>
+            </div>
               <!-- Language Line -->
               <!-- <div class="sidebar-line">
                 <span class="menu-option">Language:</span>
